gccida/c3/assemble_string
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_string/src/varasm.c:1842:7: error: use of undeclared identifier 'byte_73A750'
v15 = byte_73A750[v9]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_string/src/varasm.c:1850:6: error: use of undeclared identifier 'byte_73A750'
if ( byte_73A750[v9] ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_string/src/varasm.c:1884:7: error: use of undeclared identifier 'byte_73A750'
v12 = byte_73A750[v11]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_string/src/varasm.c:1892:7: error: use of undeclared identifier 'byte_73A750'
v12 = byte_73A750[v11]; 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assemble_string/src/obj/varasm.o] Error 1
